[development] - Corrected overlapping fonts

--- a/src/css/modules/_searchresult.scss
+++ b/src/css/modules/_searchresult.scss
@@ -39,6 +39,7 @@
 	&__title {
 		color: $black;
 		font-size: 1.5rem;
+		padding-right: 3rem;
 	}
 	&__description {
 		font-family: $font-stack-noto;
