--- a/src/css/modules/_suggestion.scss
+++ b/src/css/modules/_suggestion.scss
@@ -44,7 +44,7 @@
 		border: 0;
 	    height: 100%;
 	    margin-bottom: 3px;
-	    padding: 1.25rem 3rem;
+	    padding: 1.25rem 5rem 1.25rem 3rem;
 	    text-align: left;
 	    width: 100%;
 	    &:hover {
